# aish

./: .gitignore  Cargo.toml  README.md  model_profiles.example.json  package-lock.json  package.json
.github/workflows/: package.yml  release-bundles.yml
apps/desktop/: README.md  model_profiles.json  package.json  vercel.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  model_store.rs  shell.rs  terminal.rs
apps/desktop/src/components/: SegmentButton.tsx  TerminalSurface.tsx
apps/desktop/src/components/ai/: WorkingTrace.tsx
apps/desktop/src/components/chrome/: AppChrome.tsx
apps/desktop/src/components/settings/: SettingsDrawer.tsx
apps/desktop/src/components/terminal/: CommandComposer.tsx  TerminalCanvas.ts  TerminalCanvas.tsx  TerminalSurface.tsx  WelcomeMark.tsx  WorkingTrace.tsx
apps/desktop/src/hooks/: useAiRun.ts  useBackendStatus.ts  useModelProfiles.ts
apps/desktop/src/lib/: api.ts  defaultProfiles.ts
apps/provider-shell/: Cargo.toml
apps/provider-shell/src/: main.rs  main_setup.rs  setup.rs
apps/site/: index.html  main.js  package.json  styles.css  vite.config.mjs
apps/site/downloads/: index.html
apps/site/src/: main.jsx
crates/aish-ai/: Cargo.toml
crates/aish-ai/src/: lib.rs
crates/aish-cli-knowledge/src/: lib.rs
crates/aish-completion/: Cargo.toml
crates/aish-context/: Cargo.toml
crates/aish-context/src/: lib.rs
crates/aish-core/: Cargo.toml
crates/aish-core/src/: lib.rs
crates/aish-history/: Cargo.toml
crates/aish-history/src/: lib.rs
crates/aish-provider/: Cargo.toml
crates/aish-pty/: Cargo.toml
crates/aish-pty/src/: lib.rs
crates/aish-safety/src/: lib.rs
docs/: ARCHITECTURE.md  CLI_KNOWLEDGE_LAYER.md  DESIGN_SYSTEM.md  KEN_MODEL_FAMILY.md  MODEL_TRAINING_PLAN.md  MODES_CONTEXT_CACHE.md  PACKAGING_AND_PROVIDER.md
providers/cmd/: README.md
providers/fish/: README.md
providers/powershell/: AiSH.psm1  README.md
providers/zsh/: README.md
scripts/: create-dev-icon.py  install-unix.sh
