[workspace]
members = [
  "apps/desktop/src-tauri",
  "apps/provider-shell",
  "crates/aish-core",
  "crates/aish-pty",
  "crates/aish-context",
  "crates/aish-history",
  "crates/aish-completion",
  "crates/aish-cli-knowledge",
  "crates/aish-ai",
  "crates/aish-safety",
  "crates/aish-provider"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/amaansyed27/aish"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
