[package]
name = "aish-provider-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aish"
path = "src/main_setup.rs"

[dependencies]
aish-ai = { path = "../../crates/aish-ai" }
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", features = ["tls"] }
