[package]
name = "aish-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
anyhow = "1"
portable-pty = "0.8"
aish-core = { path = "../../../crates/aish-core" }
aish-context = { path = "../../../crates/aish-context" }
aish-completion = { path = "../../../crates/aish-completion" }
aish-provider = { path = "../../../crates/aish-provider" }
aish-safety = { path = "../../../crates/aish-safety" }
aish-ai = { path = "../../../crates/aish-ai" }
aish-pty = { path = "../../../crates/aish-pty" }
